--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -92,6 +92,12 @@
             android:summary="@string/show_qs_on_secure_keyguard_summary"
             android:defaultValue="true"/>
 
+        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+            android:key="hide_lockicon"
+            android:title="@string/hide_lockicon_title"
+            android:summary="@string/hide_lockicon_summary"
+            android:defaultValue="false" />
+
         <PreferenceScreen
             android:layout="@layout/ion_divider"
             android:selectable="false" />
