--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -770,21 +770,29 @@
     <!-- VoLTE Icon Type -->
     <string-array name="volte_icon_type_entries" translatable="false">
         <item>@string/volte_icon_default</item>
+        <item>@string/volte_icon_pie</item>
         <item>@string/volte_icon_hd</item>
         <item>@string/volte_icon_volte</item>
         <item>@string/volte_icon_oos</item>
         <item>@string/volte_icon_vo</item>
         <item>@string/volte_icon_volit</item>
         <item>@string/volte_icon_asus</item>
+        <item>@string/volte_icon_cr</item>
+        <item>@string/volte_icon_text</item>
+        <item>@string/volte_icon_volte</item>
     </string-array>
 
     <string-array name="volte_icon_type_values" translatable="false">
         <item>0</item>
+        <item>10</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>4</item>
         <item>5</item>
         <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
     </string-array>
 </resources>
