AmbientVisualizer: Add separate option to change opacity [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -928,6 +928,7 @@
     <string name="volte_icon_pie">VoLTE Pie</string>
 
     <!-- Ambient visualizer -->
+    <string name="ambient_visualizer_category">Ambient Visualizer</string>
     <string name="ambient_visualizer_title">Show on Ambient Display</string>
     <string name="ambient_visualizer_summary">Display the visualizer bars on ambient display</string>
 
