--- a/res/values-ru/ion_strings.xml
+++ b/res/values-ru/ion_strings.xml
@@ -110,8 +110,8 @@
     <!-- Dashboard conditions-->
     <string name="dashboard_category">Параметры Информационной панели</string>
     <string name="dashboard_conditions_title">Условия Информационной панели</string>
-    <string name="summary_dashboard_conditions_enabled">Условия Информационной панели включены</string>
-    <string name="summary_dashboard_conditions_disabled">Условия Информационной панели выключены</string>
+    <string name="summary_dashboard_conditions_enabled">Состояния Информационной панели включены</string>
+    <string name="summary_dashboard_conditions_disabled">Состояния Информационной панели выключены</string>
     <string name="dashboard_suggestions_title">Советы Информационной панели</string>
     <string name="summary_dashboard_suggestions_enabled">Советы Информационной панели включены</string>
     <string name="summary_dashboard_suggestions_disabled">Советы Информационной панели выключены</string>
@@ -138,7 +138,7 @@
     <!-- Incall vibrate options -->
     <string name="incall_vibration_category">Варианты вибрации при вызове</string>
     <string name="incall_vibrate_connect_title">Вибрация при соединении</string>
-    <string name="incall_vibrate_connect_summary">Включить вибрацию при соединения вызова</string>
+    <string name="incall_vibrate_connect_summary">Включить вибрацию при соединении вызова</string>
     <string name="incall_vibrate_call_wait_title">Вибрация при ожидании вызова</string>
     <string name="incall_vibrate_call_wait_summary">Включить вибрацию при ожидании вызова</string>
     <string name="incall_vibrate_disconnect_title">Вибрация при разъединении</string>
@@ -335,7 +335,7 @@
     <!-- Screenshot -->
     <string name="screenshot_type_title">Тип скриншота</string>
     <string name="screenshot_type_fullscreen">Полноэкранный скриншот</string>
-    <string name="screenshot_type_partial">Перетащите выделение на область, которую вы хотите сохранить в качестве скриншота</string>
+    <string name="screenshot_type_partial">Частичный скриншот</string>
     <string name="screenshot_options_category">Опции скриншота</string>
     <string name="screenshot_options_summary">Настроить атрибуты скриншота, такие как время, задержка, тип и т.д.</string>
 
@@ -358,8 +358,8 @@
 
     <!-- Enable keys backlight-->
     <string name="button_brightness_sw_title">Включить подсветку</string>
-    <string name="button_backlight_on_touch_only_title">Касание кнопки</string>
-    <string name="button_backlight_on_touch_only_summary">Включить подсветку с тайм-аутом только при нажатии кнопки</string>
+    <string name="button_backlight_on_touch_only_title">Касание кнопок</string>
+    <string name="button_backlight_on_touch_only_summary">Включить подсветку с тайм-аутом только при нажатии кнопок</string>
 
     <!-- HW Keys customization -->
     <string name="action_value_default_action" translatable="false">по умолчанию</string>
@@ -403,7 +403,7 @@
 
     <!-- Allow fake signature -->
     <string name="allow_signature_fake">Разрешить подмену подписи</string>
-    <string name="allow_signature_fake_summary">Разрешить приложениям обходить системы безопасности, выдавая себя за другое приложение.</string>
+    <string name="allow_signature_fake_summary">Разрешить приложениям обходить системы безопасности, выдавая себя за другое приложение</string>
 
     <!-- Screen off animation -->
     <string name="screen_off_animation_fade">Простое исчезновение</string>
@@ -471,7 +471,7 @@
     <string name="lock_clock_font_dialog_title">Выберите шрифт часов Экрана блокировки</string>
     <string name="lock_clock_font_stock">Нормальный</string>
     <string name="lock_clock_font_bold">Жирный</string>
-    <string name="lock_clock_font_italic">Italic</string>
+    <string name="lock_clock_font_italic">Курсив</string>
     <string name="lock_clock_font_bold_italic">Жирный курсив</string>
     <string name="lock_clock_font_light_italic">Легкий курсив</string>
     <string name="lock_clock_font_thin_italic">Тонкий курсив</string>
@@ -554,8 +554,8 @@
     <string name="quick_pulldown_summary">%1$s край строки состояния открывает Быстрые настройки</string>
     <string name="quick_pulldown_summary_always">Всегда открывать Быстрые настройки при свайпе Строки состояния вниз </string>
     <string name="quick_pulldown_off">Выключено</string>
-    <string name="quick_pulldown_left">Слева</string>
-    <string name="quick_pulldown_right">Справа</string>
+    <string name="quick_pulldown_left">Левый</string>
+    <string name="quick_pulldown_right">Правый</string>
     <string name="quick_pulldown_always">Всегда</string>
 
     <!-- Smart Pixels -->
@@ -615,7 +615,7 @@
     <string name="battery_percentage_next">Включен</string>
     <string name="battery_percentage_inside">Включен (внутри иконки)</string>
     <string name="battery_percentage_estimate">Включен (оценка оставшегося времени)</string>
-    <string name="battery_percentage_percentage_estimate">Включен(процент | оценка оставшегося времени)</string>
+    <string name="battery_percentage_percentage_estimate">Включен (процент | оценка оставшегося времени)</string>
 
     <!-- Status bar - Battery custom charging symbol -->
     <string name="text_charging_symbol_title">Пользовательский символ зарядки для текстового стиля</string>
@@ -645,7 +645,7 @@
     <string name="carrier_label_settings_title">Название оператора</string>
     <string name="carrier_label_settings_summary">Настроить название оператора</string>
     <string name="custom_carrier_label_title">Пользовательское название оператора</string>
-    <string name="custom_carrier_label_explain">Пожалуйста, введите новое название. Оставьте пустым, чтобы вернуться к стоковому названию.</string>
+    <string name="custom_carrier_label_explain">Пожалуйста, введите новое название. Оставьте пустым, чтобы вернуться к стоковому названию</string>
     <string name="custom_carrier_label_notset">Пользовательское название в данный момент не установлено</string>
     <string name="show_carrier_title">Название оператора</string>
     <string name="show_carrier_disabled">Отключено</string>
@@ -727,7 +727,7 @@
 
     <!-- Brightness icon-->
     <string name="brightness_icon_title">Иконка автояркости</string>
-    <string name="brightness_icon_summary">Показывать иконку автояркости справа от ползунка яркости для настройки автояркости</string>
+    <string name="brightness_icon_summary">Показывать иконку автояркости справа от ползунка яркости</string>
 
     <!-- Force Expanded Settings -->
     <string name="force_expanded_settings_title">Принудительно расширенные настройки</string>
@@ -847,7 +847,7 @@
 
     <!-- Old mobile type icons -->
     <string name="use_old_mobiletype_title">Маленькая иконка мобильной передачи данных</string>
-    <string name="use_old_mobiletype_summary">Показывать иконку мобильной передачи данных над индикатором сигнала</string>
+    <string name="use_old_mobiletype_summary">Показывать маленькую иконку мобильной передачи данных над индикатором сигнала</string>
 
     <!-- Ambient edge lighting -->
     <string name="notification_screen_title">Экран</string>
