SystemUI: Option to hide lockscreen clock & date [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -24,18 +24,19 @@
         android:key="lock_clock_size"
         android:title="@string/lockcsize" >
 
-        <Preference
+        <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
             android:key="lockscreen_clock"
             android:title="@string/lockscreen_clock_title"
             android:summary="@string/lockscreen_clock_summary"
             android:fragment="com.ion.ionizer.fragments.LockScreenClock"
             android:defaultValue="true" />
 
-        <Preference
+        <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
             android:key="lockscreen_info"
             android:title="@string/lockscreen_info_title"
             android:summary="@string/lockscreen_info_summary"
             android:fragment="com.ion.ionizer.fragments.LockScreenDate"
+            android:dependency="lockscreen_clock"
             android:defaultValue="true" />
     </PreferenceCategory>
 
