--- a/res/values-ru/ion_strings.xml
+++ b/res/values-ru/ion_strings.xml
@@ -142,7 +142,7 @@
     <string name="incall_vibrate_call_wait_title">Вибрация при ожидании</string>
     <string name="incall_vibrate_call_wait_summary">Включить вибрацию при ожидании вызова</string>
     <string name="incall_vibrate_disconnect_title">Вибрация при разъединении</string>
-    <string name="incall_vibrate_disconnect_summary">Включить вибрацию после разъединения вызова</string>
+    <string name="incall_vibrate_disconnect_summary">Включить вибрацию при разъединении вызова</string>
 
     <!-- Lockscreen battery info indicator  -->
     <string name="lockscreen_battery_info_title">Информация о зарядке на Экране блокировки</string>
