--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -23,6 +23,12 @@
         android:key="theme_customization_category"
         android:title="@string/theme_customization_category">
 
+        <com.ion.ionizer.colorpicker.ColorPickerPreference
+            android:key="accent_color"
+            android:title="@string/theme_customization_accent_color_title"
+            settings:defaultColorValue="0xff1a73e8"
+            android:persistent="false" />
+
         <ListPreference
             android:key="android.theme.customization.font"
             android:title="@string/theme_customization_font_title"/>
