QS Header data usage info [2/2]
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1136,4 +1136,7 @@
     <!-- Translucent lockscreen notifications background -->
     <string name="translucent_lockscreen_notifications_bg_title">Translucent notifications background</string>
     <string name="translucent_lockscreen_notifications_bg_summary">Show translucent notifications background on lockscreen</string>
+
+    <string name="qs_datausage_title">Show data usage in qs header</string>
+    <string name="qs_datausage_subtitle">Shows data usage in quick settings header of sim used for data</string>
 </resources>
