--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -970,6 +970,7 @@
     <string name="status_bar_custom_header_height_title">Image height offset</string>
 
     <!-- QS themes -->
+    <string name="qs_bg_color_title">QS Header color</string>
     <string name="qs_panel_color_title">QS Panel color</string>
     <string name="qs_bg_wall_title">Use Wallpaper colors</string>
     <string name="qs_bg_wall_summary">Set QS background color from Wallpaper</string>
