--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -16,6 +16,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/interface_title"
+    xmlns:ionionizer="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     settings:initialExpandedChildrenCount="4">
 
@@ -98,6 +99,16 @@
             android:title="@string/blur_quicksettings_title"
             android:summary="@string/blur_quicksettings_summary"
             android:defaultValue="true" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="qs_blur_alpha"
+            android:title="@string/qs_blur_alpha_title"
+            android:summary="@string/qs_blur_alpha_summary"
+            android:max="100"
+            settings:min="1"
+            ionionizer:units="%"
+            android:defaultValue="100"
+            android:dependency="qs_blur" />
     </PreferenceCategory>
 
     <PreferenceCategory
